applications/repo-download-cn-north4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: repo-ingress
spec:
  tls:
    - hosts:
        - download.mindspore.cn
      secretName: download-secrets
  rules:
    - host: download.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: repo-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: repo-download-osinfra-ingress
  namespace: download
spec:
  tls:
    - hosts:
        - download-mindspore.osinfra.cn
      secretName: download-osinfra-tls
  rules:
    - host: download-mindspore.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: repo-service
              servicePort: 80
            path: /
